# acetate

./: .env  .env.local  .gitignore  .pnp.cjs  .tool-versions  .yarnrc.yml  Cargo.toml  README.md  package.json
crates/axum-server/: Cargo.toml
crates/axum-server/src/: config.rs  error.rs  main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/ui/: Cargo.toml  Dioxus.toml  README.md
crates/ui/public/: tailwind.css
crates/ui/src/: main.rs
db/: schema.sql
db/migrations/: 20240205233649_actions.sql  20240617185826_add-actions-table.sql  20240618201143_add-actions-table.sql  20240621224746_add-username.sql  20240626045856_fix-unique-constraint-on-actions.sql  20240626051401_convert-action-id-to-int.sql  20240917213551_add-wantlist-to-user-table.sql
frontend/: .env.local  .flake8  .mise.toml  .pnp.cjs  app.py  exeptions.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tailwind.css
frontend/static/: tailwind.css
frontend/templates/: by_artist.jinja  by_label.jinja  collect.jinja  dig.jinja  discover.jinja  filter.jinja  filters.jinja  image.jinja  index.jinja  layout.jinja  playlist.jinja  prices.jinja  releases.jinja  search.jinja  wants.jinja
frontend/templates/by_artist/: artist-property.jinja  artist.jinja  releases.jinja  results.jinja
frontend/templates/by_label/: artist-property.jinja  artist.jinja  releases.jinja  results.jinja
frontend/templates/collection/: pagination.jinja  release.jinja  results.jinja
frontend/templates/components/: active-search.jinja  button-with-loading-state.jinja  loader.jinja  release-property.jinja  release-small.jinja  tags.jinja  thumb.jinja  user-menu.jinja  youtube.jinja
frontend/templates/dig/: pagination.jinja  release.jinja  results.jinja
frontend/templates/discover/: active_filters.jinja  filters.jinja  hidden.jinja  hide.jinja  pagination.jinja  release.jinja  results.jinja  unwanted.jinja  wanted.jinja
frontend/templates/releases/: hidden.jinja  pagination.jinja  release.jinja  results.jinja  wanted.jinja
