[tool.poetry]
name = "risk"
version = "0.1.0"
description = ""
authors = ["Emory Petermann <emory@onlyfor.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = {extras = ["async"], version = "^3.0.3"}
flask-htmx = "^0.3.2"
authlib = "^1.3.1"
gunicorn = "^22.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pyroaring = "^0.4.5"
elastic-apm = {version = "^6.22.3", extras = ["flask"]}
psutil = "^6.0.0"
httpx = {version = "^0.27.0", extras = ["http2"]}
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = ".venv"
venvPath = "."
