[project]
name = "acetate-py"
version = "0.0.0"
description = ""
authors = [{ name = "Emory Petermann", email = "emory@onlyfor.us" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "Flask[async]",
    "flask-htmx",
    "authlib",
    "gunicorn",
    "flask-sqlalchemy",
    "python-dotenv",
    "pyroaring",
    "elastic-apm[flask]",
    "psutil",
    "httpx[http2]",
    "requests",
    "colorhash",
    "elasticsearch[async]<9",
    "roaringbitmap",
    "psycopg2",
    "flask-caching",
    "posthog>=6.7.0",
]

[dependency-groups]
dev = [
    "djlint",
    "ruff",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.ruff]
exclude = ["__pycache__/"]
include = ["**/pyproject.toml", "*.py"]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"ANN",
"D"
]
