[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"]}
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["macros", "fs", "rt-multi-thread"], default-features = false }

[target.aarch64-apple-darwin]
linker = "mold"
