[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"]}
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls",  "postgres" ] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["macros", "fs", "rt-multi-thread"], default-features = false }
elasticsearch = { version =  "8.5.0-alpha.1", features = ["rustls-tls"] }
reqwest = "0.11.24"
#elasticsearch-dsl = "0.4.20"
serde_json = "1.0.113"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
axum-extra = { version = "0.9.2", features = ["query"] }
dotenv = "0.15.0"
#axum-login = "0.15.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
roaring = { version = "0.10.5", features = ["serde"] }
base64 = "0.22.1"