[package]
name = "ui"
version = "0.1.0"
authors = ["Emory Petermann <emory@onlyfor.us>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { path = "../../../dioxus/packages/dioxus", features = ["router"] }
dioxus-web = { path = "../../../dioxus/packages/web" }
#dioxus-router = { path = "../../../dioxus/packages/router", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
reqwest = {version = "0.11.24", features = ["json"]}
#elasticsearch-dsl = "0.4.20"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
async-std = "1.12.0"
js-sys = "0.3.68"

[target.aarch64-apple-darwin]
linker = "mold"
